# Invigo-Server

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  WIKI.md  assembly_convert_old_to_new.py  build-puppeteer.sh  docker-compose.yaml  docker-compose.yml  docker_build.bat  docker_build.sh  dockerfile  eslint.config.js  git_pull_and_run.bat  install.bat  laser_cut_part_convert_old_to_new.py  main.py  migrate_coatings_inventory.py  migrate_components_inventory.py  migrate_invigo_db.sh  migrate_jobs.py  migrate_laser_cut_parts_inventory.py  migrate_sheets_inventory.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run.bat  server.py  setup.py  tsconfig.json  update-and-clean.sh  update.bat  update_rebuild.bat  update_rebuild_run.bat  webpack.config.js
config/: environments.py  logging_config.py  variables.py
handlers/: base.py  health.py  page.py  ping.py
puppeteer/: Dockerfile  package.json  server.js
routes/: group.py  route.py  route_map.py
scripts/: README.md  generate-pdf.js  generate-png.js
src/: add_cutoff_sheet.js  index.js  inventories.js  inventory_table.js  job_printouts.js  logs.js  manifest.json  printout.js  production_planner.js  sheet_template.js  sheet_template_read_only.js  utils.js  view_qr_codes.js  way_back_machine.js  workorder.js  workspace_archives_dashboard.js  workspace_dashboard.js
static/: theme.css
templates/: add_cutoff_sheet.html  dashboard.html  index.html  inventories.html  inventory_table.html  job_printouts.html  logs.html  production_planner.html  scedule_planner.html  sheet_template.html  (+8 more)
(+521 files in other folders)
